<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:baselineAligned="false"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <LinearLayout
        android:id="@+id/TotalContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">

        <TextView
            android:id="@+id/totalLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/total" />

        <TextView
            android:id="@+id/totalNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:layout_weight="1"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/totalSpotlabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/freeSpots" />

        <View
            android:id="@+id/horizontalBorderline"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#37474f" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BottomContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/WomenContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/womenLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/thereof" />

            <TextView
                android:id="@+id/womenNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="0"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/womenSpotlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/womenSpots" />


        </LinearLayout>

        <View
            android:id="@+id/verticalBorderline"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#37474f" />

        <LinearLayout
            android:id="@+id/DisabledContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/disabledLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/thereof" />

            <TextView
                android:id="@+id/disabledNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="0"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/disabledSpotlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/disabledSpots" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
